# django-cpss-facebook

./: .travis.yml  LICENSE  MANIFEST.in  README.md  manage.py  setup.cfg
cpss_facebook/: __init__.py  admin.py  apps.py  asgi.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py  wsgi.py
facebook-django/: __init__.py  admin.py  apps.py  asgi.py  settings.py  signals.py  views.py  wsgi.py
facebook-django/migrations/: 0001_initial.py
facebook-django/models/: client.py  facebook.py
