[metadata]
name = django-cpss-facebook
version = 1.0.0
description = This is the Django component that helps to integrate aspects of facebook into your application.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/xgdfalcon/django-cpss-facebook/
author = CPSS by XGDFalcon®
author_email = xgdfalcon@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: